# music-generator

./: .coveragerc  .env.example  .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: main.py
app/adapters/: __init__.py
app/adapters/audio_processor/: __init__.py  base_audio_processor_adapter.py  pydub_adapter.py
app/adapters/services/: __init__.py  base_adapter.py  base_service_adapter.py  openai_adapter.py
app/config/: env_manager.py  routes_registerer.py
app/domain/models/: __init__.py  chord.py  key.py  note.py  note_progression.py  note_progression_response.py  notes_progression_request.py  scales.py
app/domain/use_cases/: __init__.py  generate_note_progression.py  progression_use_cases.py
app/routers/: __init__.py  progression.py
app/tests/adapters/audio_processor/: test_pydub_adapter.py
app/tests/adapters/services/: test_openai_adapter.py
app/tests/domain/models/: test_key.py  test_note.py  test_scale.py
app/tests/domain/use_cases/: test_generate_note_progression.py
app/tests/fixtures/: note_fixture.py
infrastructure/aws/api_gateway/: main.tf  variables.tf
infrastructure/aws/ecr/: main.tf  variables.tf
infrastructure/aws/iam/: main.tf  variables.tf
infrastructure/aws/lambda/: main.tf  variables.tf
infrastructure/aws/s3/: main.tf  variables.tf
