[tool.poetry]
name = "music-generator"
version = "0.1.0"
description = "Core code to generate music progressions"
authors = ["Jonathan Andres Naranjo <pinto_199728@hotmail.com>"]
readme = "README.md"
packages = [{include = "music_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
anyio = "3.6.2"
async-timeout = "4.0.2"
attrs = "22.2.0"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
click = "8.1.3"
exceptiongroup = "1.1.0"
fastapi = "0.89.1"
frozenlist = "1.3.3"
h11 = "0.14.0"
idna = "3.4"
iniconfig = "2.0.0"
mangum = "0.17.0"
multidict = "6.0.4"
openai = "0.26.1"
packaging = "23.0"
pluggy = "1.0.0"
pydantic = "1.10.4"
pydub = "0.25.1"
python-dotenv = "0.21.0"
requests = "2.28.2"
sniffio = "1.3.0"
starlette = "0.22.0"
tomli = "2.0.1"
tqdm = "4.64.1"
typing-extensions = "4.4.0"
urllib3 = "1.26.14"
uvicorn = "0.20.0"
yarl = "1.8.2"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
mypy = "^0.971"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
